layout issues

--- a/curation-web/src/scss/curation.scss
+++ b/curation-web/src/scss/curation.scss
@@ -1,5 +1,6 @@
 $primary: #0080aa;
-$font-family-sans-serif: "Source Sans 3", sans-serif;
+$font-family-base: "Source Sans Pro",Calibri,Arial,Helvetica,sans-serif;
+$font-size-base: 0.875rem;
 
 @import "../node_modules/bootstrap/scss/mixins/banner";
 // scss-docs-start import-stack
